# otel-genai-practice

./: README.md  main.py  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json
